<resources>
    <string name="app_name">SimpleBlog</string>
    <string name="Post_title">Post Title ... </string>
    <string name="imagebutton">imageButton</string>
    <string name="submit_post">Submit Post</string>
    <string name="post_title">Post Title ...</string>
    <string name="post_description">Post Description ...</string>
    <string name="post_title_goes_here">Post Title Goes here</string>
    <string name="post_description_goes_here">Post Description Goes Here</string>
    <string name="contdescimg">contDescImg</string>
</resources>
